# imdb-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  imdb_server.py  pyproject.toml  requirements.txt  smithery.yaml
src/: api.py  config.py  main.py  middleware.py  tools.py
src/imdb_mcp_server/: api.py  cache.py  main.py  tools.py
